[package]
name = "rust-monad"
version = "0.1.0"
authors = ["Devyn Goetsch <devynmichellegoetsch@gmail.com>"]

[dependencies]
rand = "0.5.5"
iron = "0.6.0"
bodyparser = "0.8.0"
persistent = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
router = "0.6.0"
cargo-download = "0.1.1"
hyper = "0.12.13"
futures = "0.1.21"
log = "0.4.6"
simple_logger = "1.0.1"